--- a/src/main/resource/db.properties
+++ b/src/main/resource/db.properties
@@ -1,4 +1,4 @@
 db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@0.tcp.us-cal-1.ngrok.io:14117:xe
+db.url=jdbc:oracle:thin:@0.tcp.jp.ngrok.io:13845:xe
 db.username=test3
 db.password=1111
