병합 및 검색 기능 추가

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@6.tcp.us-cal-1.ngrok.io:19539:xe
-db.username=test3
+db.url=jdbc:oracle:thin:@localhost:1521:xe
+db.username=test
 db.password=1111
