--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,18 @@
 			<version>2.19.0</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.17.2</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
