구매정보 입력한 배송지 정보 추가

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Seoil_Proejct</name>
+	<name>Book_Proejct</name>
 	<comment></comment>
 	<projects>
 	</projects>
