--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 db.driver=oracle.jdbc.driver.OracleDriver
 db.url=jdbc:oracle:thin:@localhost:1521:xe
-db.username=test
+db.username=C##test
 db.password=1111
