--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,11 @@
 			<version>20231013</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.17.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
