--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.17.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
