--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@localhost:1521:xe
-db.username=test
-db.password=1111
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://127.0.0.1:3306/book_project?serverTimezone=UTC
+db.username=bookproject
+db.password=1234
