--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,8 @@ jobs:
       - name: Zip the deployment package
         run: |
           WAR_FILE=$(ls target/*.war | head -n 1)
-          zip -r deploy.zip $WAR_FILE
+          mv $WAR_FILE target/ROOT.war
+          zip -r deploy.zip target/ROOT.war
 
       # 6. AWS CLI를 사용하여 직접 배포 (순서 수정됨)
       - name: Deploy to Elastic Beanstalk using AWS CLI
