--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://book-project-rds.ch4c06s0y95e.ap-northeast-2.rds.amazonaws.com:3306/book_project?serverTimezone=UTC
+db.url=jdbc:mysql://book-project-rds.ch4c06s0y95e.ap-northeast-2.rds.amazonaws.com:3306/?serverTimezone=UTC
 db.username=bookproject
 db.password=bookproject
 
