fix: 컴포넌트 중복 스캔 수정

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,9 @@
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://book-project-rds.ch4c06s0y95e.ap-northeast-2.rds.amazonaws.com:3306/book_project?serverTimezone=UTC&useAabandonedConnectionCleanup=true
-db.username=bookproject
-db.password=bookproject
-
 #db.driver=com.mysql.cj.jdbc.Driver
-#db.url=jdbc:mysql://127.0.0.1:3306/book_project?serverTimezone=UTC
+#db.url=jdbc:mysql://book-project-rds.ch4c06s0y95e.ap-northeast-2.rds.amazonaws.com:3306/book_project?serverTimezone=UTC&useAabandonedConnectionCleanup=true
 #db.username=bookproject
-#db.password=1234
+#db.password=bookproject
+
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://127.0.0.1:3306/book_project?serverTimezone=UTC
+db.username=bookproject
+db.password=1234
