fix: cleanup 스레드 메모리 누수 해결

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,6 +4,6 @@
 #db.password=bookproject
 
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/book_project?serverTimezone=UTC
+db.url=jdbc:mysql://127.0.0.1:3306/book_project?serverTimezone=UTC&abandonedConnectionCleanupThread=false
 db.username=bookproject
 db.password=1234
