fix: 메모리 누수 방지용 리스너 추가

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>home.MySQLCleanupListener</listener-class>
+	</listener>
 
 
 	<!-- DispatcherServlet 등록 -->
