--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://bookforest-rds-instance.ch4c06s0y95e.ap-northeast-2.rds.amazonaws.com:3306/book_project?serverTimezone=UTC&useAabandonedConnectionCleanup=true
+db.url=jdbc:mysql://bookforest-rds.cxyc6y60oldz.ap-northeast-2.rds.amazonaws.com:3306/book_project?serverTimezone=UTC&useAabandonedConnectionCleanup=true
 db.username=admin
 db.password=bookforest
 
