--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,12 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.11</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.github.vladimir-bukhtoyarov</groupId>
+		    <artifactId>bucket4j-core</artifactId>
+		    <version>7.6.0</version>
+		</dependency>
 
 		<!-- 파일업로드 -->
 		<!--
